--- a/2-dice-roller/style.css
+++ b/2-dice-roller/style.css
@@ -7,13 +7,18 @@ body {
   margin: 0;
 }
 
+.dark-mode {
+  background-color: rgb(33, 33, 33);
+  color: rgb(254, 255, 234);
+}
+
 main {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
   height: 100vh;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
 }
 
 label span {
@@ -27,7 +32,7 @@ input[type="number"] {
   width: 150px;
 }
 
-#roll-btn {
+button {
   font-size: 1.5rem;
   background-color: var(--primary-light);
   color: white;
@@ -48,8 +53,8 @@ input[type="number"] {
 
 .row {
   display: flex;
-  align-items: center;
   gap: 1rem;
+  align-items: center;
 }
 
 #dice-result {
